force-app/main/default/objects/Opportunity/fields/IFI_ContractID__c.field-meta.xml
<CustomField>
    <fullName>IFI_ContractID__c</fullName>
    <displayFormat>CT-{0000000}</displayFormat>
    <externalId>true</externalId>
    <label>Contract ID</label>
    <type>AutoNumber</type>
</CustomField>