force-app/main/default/objects/Opportunity/fields/IFI_Entity__c.field-meta.xml
<CustomField>
    <fullName>IFI_Entity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Entity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>IFI_Location__c.IFI_IsEntity__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>IFI_Location__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>