force-app/main/default/objects/Opportunity/fields/IFI_ProjectID__c.field-meta.xml
<CustomField>
    <fullName>IFI_ProjectID__c</fullName>
    <displayFormat>P{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Project ID</label>
    <type>AutoNumber</type>
</CustomField>