force-app/main/default/objects/Opportunity/fields/IFI_UltimateParentProjectID__c.field-meta.xml
<CustomField>
    <fullName>IFI_UltimateParentProjectID__c</fullName>
    <label>Ultimate Parent Project ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>