force-app/main/default/objects/Opportunity/fields/IFI_UltimateParentSFID__c.field-meta.xml
<CustomField>
    <fullName>IFI_UltimateParentSFID__c</fullName>
    <label>Ultimate Parent SFID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>