force-app/main/default/objects/Opportunity/fields/IFI_UltimateParentSFIDCaseSafe__c.field-meta.xml
<CustomField>
    <fullName>IFI_UltimateParentSFIDCaseSafe__c</fullName>
    <formula>CASESAFEID(IFI_UltimateParentSFID__c )</formula>
    <label>Ultimate Parent SFID CaseSafe</label>
    <type>Text</type>
</CustomField>